2025-01-09T12:13:56Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12689656327 # 761
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-09
* notice: last 14d: unq all: 15 32
* notice: prev accum: outdated-unq outdated-all / unq all: 927 4881 / 944 4939
* notice: next accum: outdated-unq outdated-all / unq all: 927 4881 / 945 4940
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -3 -27 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-12-26 2025-01-09]

2025-01-09T00:37:36Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12681604427 # 760
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-09
* notice: last 14d: unq all: 17 58
* notice: prev accum: outdated-unq outdated-all / unq all: 927 4881 / 942 4934
* notice: next accum: outdated-unq outdated-all / unq all: 927 4881 / 944 4939
* notice: prev exec diff / last date diff / accum: unq all: +2 +5 -0 -0 / +2 +5 -0 -0 / 2 5
* notice: removed / changed dates: [] / [2025-01-08]

2025-01-08T12:14:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12670333907 # 759
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-08
* notice: last 14d: unq all: 15 53
* notice: prev accum: outdated-unq outdated-all / unq all: 926 4880 / 942 4934
* notice: next accum: outdated-unq outdated-all / unq all: 927 4881 / 942 4934
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-12-25] / []

2025-01-08T00:37:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12661777763 # 758