@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-01-09T12:13:56Z",
-  "count_outdated" : 4881,
-  "uniques_outdated" : 927,
-  "count" : 4940,
-  "uniques" : 945,
+  "timestamp" : "2025-01-10T00:38:38Z",
+  "count_outdated" : 4913,
+  "uniques_outdated" : 932,
+  "count" : 4944,
+  "uniques" : 946,
   "views" : [
-    {
-      "timestamp": "2024-12-26T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 5, 32 ],
-      "count_decinc": [ 27, 32 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 5 ],
-      "uniques_decinc": [ 3, 5 ]
-    },
     {
       "timestamp": "2024-12-27T00:00:00Z",
       "count": 3,
@@ -88,12 +79,12 @@
     },
     {
       "timestamp": "2025-01-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 5,
+      "count_minmax": [ 1, 5 ],
+      "count_decinc": [ 0, 5 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
