@@ -1,12 +1,7 @@
 {
-  "count": 32,
-  "uniques": 15,
+  "count": 31,
+  "uniques": 14,
   "views": [
-    {
-      "timestamp": "2024-12-26T00:00:00Z",
-      "count": 5,
-      "uniques": 2
-    },
     {
       "timestamp": "2024-12-27T00:00:00Z",
       "count": 3,
@@ -49,8 +44,8 @@
     },
     {
       "timestamp": "2025-01-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 5,
+      "uniques": 2
     }
   ]
 }
